--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 30px;
+    padding-bottom: 15px;
     margin: 5px 0;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -52,7 +53,7 @@ section {
     width: 100%;
 }
 #logo {
-    margin-top: 5vh;
+    margin-top: 7px;
     width: 100px; 
     height: auto;
 }
