--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ body {
 
 .container {
     position: relative;
-    width: 400px;
-    height: 500px;
+    width: 80%; /* Alterado para 80% da largura da tela */
+    max-width: 600px; /* Adicionado máximo de 600px */
     background: transparent;
     border: 2px solid rgba(255, 255, 255, 0.5);
     border-radius: 20px;
@@ -23,7 +23,6 @@ body {
     align-items: center;
     justify-content: center;
     padding: 30px;
-    padding-bottom: 15px;
     margin: 5px 0;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -52,16 +51,19 @@ section {
     min-height: 100vh;
     width: 100%;
 }
+
 #logo {
     margin-top: 7px;
     width: 100px; 
     height: auto;
 }
+
 #loadingGif {
-  width: 300px;
-  height: auto;
-  margin-bottom: 20px;
+    width: 300px;
+    height: auto;
+    margin-bottom: 20px;
 }
+
 #startButton,
 #pauseButton,
 #restartButton {
